# src/modules/auth/auth.validate.js
@@ -60,3 +60,29 @@ export const resetPasswordSchema = Joi.object({
         'New password must contain uppercase, lowercase, number, and special character'
     })
 });
+
+export const adminRegisterSchema = Joi.object({
+  firstName: Joi.string().lowercase().trim().required().messages({
+    'string.empty': 'First name is required'
+  }),
+  lastName: Joi.string().lowercase().trim().required().messages({
+    'string.empty': 'Last name is required'
+  }),
+  email: Joi.string().email().required().messages({
+    'string.empty': 'Email is required',
+    'string.email': 'Invalid email format'
+  }),
+  password: Joi.string()
+    .pattern(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&]).{8,}$/)
+    .required()
+    .messages({
+      'string.empty': 'Password is required',
+      'string.pattern.base':
+        'Password must contain uppercase, lowercase, number, and special character'
+    }),
+  passwordConfirm: Joi.any()
+    .valid(Joi.ref('password'))
+    .required()
+    .messages({ 'any.only': 'Passwords do not match' }),
+  role: Joi.string().valid('Admin', 'User').optional()
+});
